--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -12,6 +12,15 @@
       <p><a href="/tickers">Tickers</a></p>
       <p><a href="/currencies">Currencies</a></p>
       <p><a href="/symbols">Symbols</a></p>
+      <p><a href="/pg">pg</a></p>
+      <p><a href="/events">events</a></p>
+      <p><a href="/errors">errors</a></p>
+      <p><a href="/balance">balance</a></p>
+      <p><a href="/activeorder">activeorder</a></p>
+      <p><a href="/eventorder">eventorder</a></p>
+      <p><a href="/positiondebt">positiondebt</a></p>
+      <p><a href="/positionasset">positionasset</a></p>
+      <p><a href="/positionratio">positionratio</a></p>
   </section>
 </main>
 {% endblock %}
