--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -21,6 +21,7 @@
       <p><a href="/positiondebt">positiondebt</a></p>
       <p><a href="/positionasset">positionasset</a></p>
       <p><a href="/positionratio">positionratio</a></p>
+      <p><a href="/tradeable">tradeable</a></p>
   </section>
 </main>
 {% endblock %}
