--- a/templates/currencies.html
+++ b/templates/currencies.html
@@ -10,11 +10,8 @@
             <th>№</th>
             <th>exchange</th>
             <th>currency</th>
-            <th>name</th>
+            <th>currency_name</th>
             <th>full_name</th>
-            <th>precision</th>
-            <th>confirms</th>
-            <th>contract_address</th>
             <th>is_margin_enabled</th>
             <th>is_debit_enabled</th>
         </tr>
@@ -25,19 +22,8 @@
             <td>{{ index }}</td>
             <td>{{ currency.exchange }}</td>
             <td>{{ currency.currency }}</td>
-            <td>{{ currency.name }}</td>
+            <td>{{ currency.currency_name }}</td>
             <td>{{ currency.full_name }}</td>
-            <td>{{ currency.precision }}</td>
-            <td>
-                {% if let Some(confirms) = currency.confirms %}
-                {{ confirms }}
-                {% endif %}
-            </td>
-            <td>
-                {% if let Some(contract_address) = currency.contract_address %}
-                {{ contract_address }}
-                {% endif %}
-            </td>
             <td>{{ currency.is_margin_enabled }}</td>
             <td>{{ currency.is_margin_enabled }}</td>
         </tr>
