--- a/templates/errors/errors.html
+++ b/templates/errors/errors.html
@@ -8,7 +8,7 @@
 <table>
     <thead>
         <tr>
-            <th>created</th>
+            <th>updated_at</th>
             <th>exchange</th>
             <th>msg</th>
         </tr>
@@ -16,7 +16,7 @@
     <tbody>
         {% for error in errors %}
         <tr>
-            <td>{{ error.created_at }}</td>
+            <td>{{ error.updated_at }}</td>
             <td>{{ error.exchange }}</td>
             <td>{{ error.msg }}</td>
         </tr>
