--- a/templates/orders/activeorders.html
+++ b/templates/orders/activeorders.html
@@ -8,6 +8,7 @@
 <table>
     <thead>
         <tr>
+            <th>updated_at</th>
             <th>exchange</th>
             <th>order_id</th>
             <th>symbol</th>
@@ -17,6 +18,7 @@
     <tbody>
         {% for order in active_orders %}
         <tr>
+            <td>{{ order.updated_at }}</td>
             <td>{{ order.exchange }}</td>
             <td>{{ order.order_id }}</td>
             <td>{{ order.symbol }}</td>
