--- a/templates/position/positiondebt.html
+++ b/templates/position/positiondebt.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Event Orders{% endblock %}
+{% block title %}Position Debt{% endblock %}
 
 {% block content %}
 <p><a href="/">Home</a></p>
-<p>Event orders</p>
+<p>Position Debt</p>
 <table>
     <thead>
         <tr>
