--- a/templates/balance/balance.html
+++ b/templates/balance/balance.html
@@ -14,7 +14,7 @@
             <th>available</th>
             <th>available_change</th>
             <th>currency</th>
-            <th>hold</th>
+            <th>hold_value</th>
             <th>hold_change</th>
             <th>relation_event</th>
             <th>relation_event_id</th>
@@ -34,7 +34,7 @@
             <td>{{ balance.available }}</td>
             <td>{{ balance.available_change }}</td>
             <td>{{ balance.currency }}</td>
-            <td>{{ balance.hold }}</td>
+            <td>{{ balance.hold_value }}</td>
             <td>{{ balance.hold_change }}</td>
             <td>{{ balance.relation_event }}</td>
             <td>{{ balance.relation_event_id }}</td>
