--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -22,6 +22,7 @@
       <p><a href="/positionasset">positionasset</a></p>
       <p><a href="/positionratio">positionratio</a></p>
       <p><a href="/tradeable">tradeable</a></p>
+      <p><a href="/msgevent">msgevent</a></p>
   </section>
 </main>
 {% endblock %}
