--- a/templates/events/msgsend.html
+++ b/templates/events/msgsend.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}MsgEvent{% endblock %}
+{% block title %}MsgSend{% endblock %}
 
 {% block content %}
 <p><a href="/">Home</a></p>
-<p>MsgEvent</p>
+<p>MsgSend</p>
 <table>
     <thead>
         <tr>
