--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -23,6 +23,7 @@
       <p><a href="/positionratio">positionratio</a></p>
       <p><a href="/tradeable">tradeable</a></p>
       <p><a href="/msgevent">msgevent</a></p>
+      <p><a href="/msgsend">msgsend</a></p>
   </section>
 </main>
 {% endblock %}
