--- a/templates/orders/activeorders.html
+++ b/templates/orders/activeorders.html
@@ -13,6 +13,8 @@
             <th>order_id</th>
             <th>symbol</th>
             <th>side</th>
+            <th>price</th>
+            <th>size</th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +25,8 @@
             <td>{{ order.order_id }}</td>
             <td>{{ order.symbol }}</td>
             <td>{{ order.side }}</td>
+            <td>{{ order.price }}</td>
+            <td>{{ order.size }}</td>
         </tr>
         {% endfor %}
     </tbody>
