--- a/templates/orders/activeorders.html
+++ b/templates/orders/activeorders.html
@@ -14,7 +14,7 @@
             <th>symbol</th>
             <th>side</th>
             <th>price</th>
-            <th>size</th>
+            <th>origin_size</th>
         </tr>
     </thead>
     <tbody>
@@ -26,7 +26,7 @@
             <td>{{ order.symbol }}</td>
             <td>{{ order.side }}</td>
             <td>{{ order.price }}</td>
-            <td>{{ order.size }}</td>
+            <td>{{ order.origin_size }}</td>
         </tr>
         {% endfor %}
     </tbody>
