--- a/templates/trade_symbols.html
+++ b/templates/trade_symbols.html
@@ -11,6 +11,7 @@
             <th>exchange</th>
             <th>symbol</th>
             <th>enable</th>
+            <th>size</th>
         </tr>
     </thead>
     <tbody>
@@ -20,6 +21,7 @@
             <td>{{ symbol.exchange }}</td>
             <td>{{ symbol.symbol }}</td>
             <td>{{ symbol.enable }}</td>            
+            <td>{{ symbol.size }}</td>            
         </tr>
         {% endfor %}
     </tbody>
