--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -25,6 +25,7 @@
       <p><a href="/symbol_trade">symbol trade</a></p>
       <p><a href="/msgevent">msgevent</a></p>
       <p><a href="/msgsend">msgsend</a></p>
+      <p><a href="/bots">bots</a></p>
   </section>
 </main>
 {% endblock %}
